Add realtime data to train schedules
